Updating configuration files

--- a/OSDevGrp.OSIntranet.Services/Web.Release.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Release.config
@@ -17,8 +17,8 @@
 
   <connectionStrings>
     <clear/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwaste;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="[TBD]" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="[TBD]" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <system.serviceModel>
@@ -49,17 +49,17 @@
     <client>
       <endpoint name="AdresseRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/AdresseRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
         <identity xdt:Transform="Replace">
-          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService" />
+          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService"/>
         </identity>
       </endpoint>
       <endpoint name="FinansstyringRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
         <identity xdt:Transform="Replace">
-          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService" />
+          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService"/>
         </identity>
       </endpoint>
       <endpoint name="FællesRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FællesRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
         <identity xdt:Transform="Replace">
-          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService" />
+          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService"/>
         </identity>
       </endpoint>
     </client>
