--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -65,8 +65,8 @@
   
   <connectionStrings>
     <clear />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwastedev;UID=ODBC;Pooling=True;SSL Mode=None" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=[TBD];DATABASE=[TBD];UID=[TBD];Pooling=True;SSL Mode=None" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=[TBD];DATABASE=[TBD];UID=[TBD];Pooling=True;SSL Mode=None" />
   </connectionStrings>
   
   <appSettings>
@@ -292,17 +292,17 @@
     <client>
       <endpoint name="AdresseRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
         <identity>
-          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService/10.128.0.189" />
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService/127.0.0.1" />
         </identity>
       </endpoint>
       <endpoint name="FinansstyringRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService">
         <identity>
-          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService/10.128.0.189" />
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService/127.0.0.1" />
         </identity>
       </endpoint>
       <endpoint name="FællesRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService">
         <identity>
-          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService/10.128.0.189" />
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService/127.0.0.1" />
         </identity>
       </endpoint>
       <endpoint name="AdressekartotekServiceIntegrationstest" address="http://localhost/osintranetdev/adressekartotekservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
