--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -65,8 +65,8 @@
 
   <connectionStrings>
     <clear />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwastedev;UID=ODBC;Pooling=True;SSL Mode=None" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="[TBD]" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="[TBD]" />
   </connectionStrings>
 
   <appSettings>
@@ -270,17 +270,17 @@
     <client>
       <endpoint name="AdresseRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
         <identity>
-          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService/10.128.0.189" />
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService/127.0.0.1"/>
         </identity>
       </endpoint>
       <endpoint name="FinansstyringRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService">
         <identity>
-          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService/10.128.0.189" />
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService/127.0.0.1"/>
         </identity>
       </endpoint>
       <endpoint name="FællesRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService">
         <identity>
-          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService/10.128.0.189" />
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService/127.0.0.1"/>
         </identity>
       </endpoint>
     </client>
@@ -300,12 +300,12 @@
                 <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName" />
               </knownCertificates>
               <allowedAudienceUris>
-                <add allowedAudienceUri="http://localhost/osintranetdev/adressekartotekservice.svc" />
-                <add allowedAudienceUri="http://localhost/osintranetdev/finansstyringservice.svc" />
-                <add allowedAudienceUri="http://localhost/osintranetdev/kalenderservice.svc" />
-                <add allowedAudienceUri="http://localhost/osintranetdev/commonservice.svc" />
-                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc" />
-                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastehouseholddataservice.svc" />
+                <add allowedAudienceUri="http://localhost/osintranetdev/adressekartotekservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/finansstyringservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/kalenderservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/commonservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastehouseholddataservice.svc"/>
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
