Updating config files and SQL scripts for the data migration of the reduce food waste database

--- a/OSDevGrp.OSIntranet.Services/Web.Debug.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Debug.config
@@ -18,7 +18,7 @@
   <connectionStrings>
     <clear/>
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=[TBD];DATABASE=[TBD];UID=[TBD];Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=[TBD];DATABASE=[TBD];UID=[TBD];Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="Server=[TBD];Port=3306;Database=[TBD];Uid=[TBD];Pwd=[TBD];SslMode=Preferred;" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <system.serviceModel>
