--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -66,7 +66,7 @@
   <connectionStrings>
     <clear />
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=[TBD];DATABASE=[TBD];UID=[TBD];Pooling=True;SSL Mode=None" />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=[TBD];DATABASE=[TBD];UID=[TBD];Pooling=True;SSL Mode=None" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="Server=[TBD];Port=3306;Database=[TBD];Uid=[TBD];Pwd=[TBD];SslMode=Preferred;" />
   </connectionStrings>
   
   <appSettings>
