--- a/OSDevGrp.OSIntranet.Infrastructure/packages.config
+++ b/OSDevGrp.OSIntranet.Infrastructure/packages.config
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
-  <package id="Google.Protobuf" version="3.6.1" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net45" />
-  <package id="MySql.Data" version="8.0.13" targetFramework="net46" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
+  <package id="AutoMapper" version="9.0.0" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net46" />
+  <package id="Google.Protobuf" version="3.11.4" targetFramework="net46" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net46" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net46" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net46" />
+  <package id="MySql.Data" version="8.0.20" targetFramework="net46" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net46" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
